--- a/_posts/2019-06-26-defusr.md
+++ b/_posts/2019-06-26-defusr.md
@@ -84,7 +84,7 @@ Note how quantization artifacts (for MVSNET) and errors are reduced while applyi
 
 ![The impact of iterations on the reconstruction quality]({{ site.url }}/assets/posts/2019-06-26-defusr/iterations.png){: .align-center}
 
-Finally, we also demonstrated that the proposed approach also works with data different from the data the network was trained on (different camera, object types and environment).
+Finally, we demonstrated that the proposed approach also works with data different from the data the network was trained on (different camera, object types and environment).
 
 ![Evaluation our approach on data it wasn't trained on]({{ site.url }}/assets/posts/2019-06-26-defusr/realdata.png){: .align-center width="600px"}
 
@@ -93,8 +93,8 @@ To learn more about DeFuSR, check out our video here:
 
 {% include video id="Cz7zz7Fuqlg" provider="youtube" %}
 
-You can find more information (including the paper, code and dataset) on [our project page](https://avg.is.tuebingen.mpg.de/research_projects/defusr).
-If you are interested in experimenting with our occupancy networks yourself, download the source code of our project and run the examples.
+You can find more information (including the paper, code and datasets) on [our project page](https://avg.is.tuebingen.mpg.de/research_projects/defusr).
+If you are interested in experimenting with our approach yourself, download the source code of our project and give it a try.
 We are happy to receive your feedback!
 
     @inproceedings{DeFuSR,
