Make header style same for all posts.

--- a/_posts/2019-06-26-defusr.md
+++ b/_posts/2019-06-26-defusr.md
@@ -88,7 +88,7 @@ Finally, we demonstrated that the proposed approach also works with data differe
 
 ![Evaluation our approach on data it wasn't trained on]({{ site.url }}/assets/posts/2019-06-26-defusr/realdata.png){: .align-center width="600px"}
 
-# Further Information
+## Further Information
 To learn more about DeFuSR, check out our video here:
 
 {% include video id="Cz7zz7Fuqlg" provider="youtube" %}
