--- a/_posts/2021-04-24-giraffe.md
+++ b/_posts/2021-04-24-giraffe.md
@@ -18,7 +18,7 @@ header:
 
 ## Introduction
 
-Generative models are great! In the typical setting, we train our generator model on a large collection of images of some domain $X$, and at test time, we can draw new samples from our prior distribution $p_z$ and get new outputs in the same domain $X$.
+Generative models are great! In the typical setting, we train our generator model on a large collection of images of some domain $X$, and at test time, we can draw new samples from our prior distribution $p_z$ and get new outputs in the same domain $X$:
 
 ![2D GAN]({{ site.url }}/assets/posts/2021-04-24-giraffe/2d-gan.png){: .align-center}
 
@@ -32,7 +32,7 @@ In practice, we often do only want to generate new images, but we would like to 
 
 ![2D GAN]({{ site.url }}/assets/posts/2021-04-24-giraffe/question-car-move.png){: .align-center}
 
-It turns out that this problem is quite hard! One reason for this is that if we would like to easily move objects around, rotate them, and change the camera viewpoint, the model requires some form of **reasoning in 3D**. Further, the model needs to encapsulate individual objects in the scene to allow for controlling them individually. In remains unclear how we can achieve this when our model operates only in 2D.
+It turns out that this problem is quite hard! One reason for this is that if we would like to easily move objects around, rotate them, and change the camera viewpoint, the model needs to perform some form of **reasoning in 3D**. Further, the model has to encapsulate individual objects in the scene to allow for controlling them individually. In remains unclear how we can achieve this when our model operates only in 2D.
 
 ## Our Approach
 
@@ -61,15 +61,15 @@ Here we show some results for moving the object around and rotating it when we t
 Note how the background doesn't change while we move the car around. Our model clearly disentangles fore- from background!
 
 Similarly, we can also change the latent shape and appearance codes while we keep everything else fixed.
-In the following, we show a shape interpolation (top) as well as an appearance interpolation (bottom):
+Here we show a shape interpolation (top) as well as an appearance interpolation (bottom):
 
 ![2D GAN]({{ site.url }}/assets/posts/2021-04-24-giraffe/shape_app.gif){: .align-center}
 
-We can also interpolate between different background while we keep the car fixed:
+We can also interpolate between different backgrounds while keeping the car fixed:
 
 ![2D GAN]({{ site.url }}/assets/posts/2021-04-24-giraffe/cars_bg.gif){: .align-center}
 
-Finally, we can even add more cars to the scene! Keep in mind that we trained our model on a dataset which contains images of single cars:
+Finally, we can even add more cars to the scene! Keep in mind that we trained our model on a dataset which contains **only images of single cars**:
 
 ![2D GAN]({{ site.url }}/assets/posts/2021-04-24-giraffe/cars_add.gif){: .align-center}
 
@@ -79,7 +79,7 @@ Finally, we can even add more cars to the scene! Keep in mind that we trained ou
 To learn more about GIRAFFE, watch our video here:
 {% include video id="bOPjKXUNucQ" provider="youtube" %}
 
-For more detailed information, check out the [project page](https://m-niemeyer.github.io/project-pages/giraffe/index.html) [paper](http://www.cvlibs.net/publications/Niemeyer2021CVPR.pdf), and [supplementary](http://www.cvlibs.net/publications/Niemeyer2021CVPR_supplementary.pdf). If you are interested in experimenting with GIRAFFE yourself, download the [source code](https://github.com/autonomousvision/giraffe) and run the demo!
+For more detailed information, check out the [project page](https://m-niemeyer.github.io/project-pages/giraffe/index.html), [the paper](http://www.cvlibs.net/publications/Niemeyer2021CVPR.pdf), and [the supplementary](http://www.cvlibs.net/publications/Niemeyer2021CVPR_supplementary.pdf). If you are interested in experimenting with GIRAFFE yourself, download the [source code](https://github.com/autonomousvision/giraffe) and run the demo!
 
     @inproceedings{Niemeyer2020GIRAFFE,
         author    = {Michael Niemeyer and Andreas Geiger},  
