--- a/_posts/2021-04-24-giraffe.md
+++ b/_posts/2021-04-24-giraffe.md
@@ -32,7 +32,7 @@ In practice, we often do only want to generate new images, but we would like to 
 
 ![2D GAN]({{ site.url }}/assets/posts/2021-04-24-giraffe/question-car-move.png){: .align-center}
 
-It turns out that this problem is quite hard! One reason for this is that if we would like to easily move objects around, rotate them, and change the camera viewpoint, the model needs to perform some form of **reasoning in 3D**. Further, the model has to encapsulate individual objects in the scene to allow for controlling them individually. In remains unclear how we can achieve this when our model operates only in 2D.
+It turns out that this problem is quite hard! One reason for this is that if we would like to easily move objects around, rotate them, and change the camera viewpoint, the model needs to perform some form of **reasoning in 3D**. Further, the model has to encapsulate individual objects in the scene to allow for controlling them individually. It remains unclear how we can achieve this when our model operates only in 2D.
 
 ## Our Approach
 
