update youtube link

--- a/_posts/2021-04-24-giraffe.md
+++ b/_posts/2021-04-24-giraffe.md
@@ -77,7 +77,7 @@ Finally, we can even add more cars to the scene! Keep in mind that we trained ou
 
 ## Further Information
 To learn more about GIRAFFE, watch our video here:
-{% include video id="bOPjKXUNucQ" provider="youtube" %}
+{% include video id="fIaDXC-qRSg" provider="youtube" %}
 
 For more detailed information, check out the [project page](https://m-niemeyer.github.io/project-pages/giraffe/index.html), [the paper](http://www.cvlibs.net/publications/Niemeyer2021CVPR.pdf), and [the supplementary](http://www.cvlibs.net/publications/Niemeyer2021CVPR_supplementary.pdf). If you are interested in experimenting with GIRAFFE yourself, download the [source code](https://github.com/autonomousvision/giraffe) and run the demo!
 
