--- a/_posts/2021-09-29-snarf.md
+++ b/_posts/2021-09-29-snarf.md
@@ -47,7 +47,7 @@ How about defining the skinning weights field in canonical space? We can then tr
 
 ![Demo Forward]({{ site.url }}/assets/posts/2021-09-29-snarf/demo_forward.gif){: .align-center} 
 
-Because the skinning weights field is not defined in the canonical space, it is independent of the pose and naturally does not suffer from generalization.  
+Because the skinning weights field is defined in the canonical space, it is independent of the pose and naturally does not suffer from generalization.  
 
 ![Result Forward]({{ site.url }}/assets/posts/2021-09-29-snarf/result_forward.gif){: .align-center} 
 
