--- a/_posts/2021-09-29-snarf.md
+++ b/_posts/2021-09-29-snarf.md
@@ -39,7 +39,7 @@ Previous work chooses to define the skinning weights in deformed space. To know 
 
 ![Demo Backward]({{ site.url }}/assets/posts/2021-09-29-snarf/demo_backward.gif){: .align-center} 
 
-We call such method backward skinning as it maps points in deformed space back to canonical space. Note that in this formulation, we need to know the skinning weights of points in deformed space. In different poses, the same point in the deformed space will have different skinning weights, becasue the deformed space itself changes with the pose. So the MLP needs to memorize the skinning weights in different poses and cannot generalize to unseen poses, which is an important limitation.
+We call such method backward skinning as it maps points in deformed space back to canonical space. Note that in this formulation, we need to know the skinning weights of points in deformed space. In different poses, the same point in the deformed space will have different skinning weights, because the deformed space itself changes with the pose. So the MLP needs to memorize the skinning weights in different poses and cannot generalize to unseen poses, which is an important limitation.
 
 ![Result Backward]({{ site.url }}/assets/posts/2021-09-29-snarf/result_backward.gif){: .align-center} 
 ### Forward Skinning: Weights in Canonical Space
@@ -56,7 +56,7 @@ But why hasn't forward skinning been used before?  We often need to know the occ
 Our approach addresses this technical challenge and enables querying canonical correspondences of deformed points with forward skinning weights. Using our approach, we can generate deformed shapes in any poses, even those unseen during training. 
 
 ## Our Approach
-The core of the problem is: given a forward mapping function $d:x \rightarrow x'$, determine it's inverse mapping $x' \rightarrow x$. In our case, $d$ is the composition of LBS and an MLP, which is not invertible. Thus, we resort to numerical methods. We use Broyden's method, an iterative root finding algorithm, to find $x$ that satifise the codnition $d(x)=x'$. The solution $x$ we find is the canonical correspondence of the given $x'$.
+The core of the problem is: given a forward mapping function $d:x \rightarrow x'$, determine it's inverse mapping $x' \rightarrow x$. In our case, $d$ is the composition of LBS and an MLP, which is not invertible. Thus, we resort to numerical methods. We use Broyden's method, an iterative root finding algorithm, to find $x$ that satisfies the condition $d(x)=x'$. The solution $x$ we find is the canonical correspondence of the given $x'$.
 
 ![Pipeline]({{ site.url }}/assets/posts/2021-09-29-snarf/pipeline_0.png){: .align-center} 
 
@@ -64,7 +64,7 @@ In many cases, one deformed point might have multiple canonical correspondences.
 
 ![Gradient]({{ site.url }}/assets/posts/2021-09-29-snarf/gradient.png){: .align-center} 
 
-To this end, we obtain the occupancy probability of deformed points. We can then compare this to the ground-truth occupancy for training. However, the iterative root finding algoritm is not trivially differentiable for training. We could unroll the iterations and apply standard chain rules to compute gradients, but it would be highly time and memory-consuming. To address this problem, we derive the analytical gradients using the implicit differentiation theorem. This allows us to train our skinning weights and occupancy network from deformed observations using standard back-propagation.
+To this end, we obtain the occupancy probability of deformed points. We can then compare this to the ground-truth occupancy for training. However, the iterative root finding algorithm is not trivially differentiable for training. We could unroll the iterations and apply standard chain rules to compute gradients, but it would be highly time and memory-consuming. To address this problem, we derive the analytical gradients using the implicit differentiation theorem. This allows us to train our skinning weights and occupancy network from deformed observations using standard back-propagation.
 
 ## Does it work?
 We use our approach to model 3D minimally clothed humans. We train our method using meshes in various poses and ask the model to generate novel poses during inference time. Here is one example:
